Activity, favorited and image pages modified for bootstrap3

--- a/templates/admin/_list_activity.html
+++ b/templates/admin/_list_activity.html
@@ -30,13 +30,13 @@
 </table>
 
 <script type="text/javascript">
-$('.datatables').dataTable({
-    "sDom" : '<"top"f>t<"bottom"lp><"clear">',
-    "aaSorting": [[ 0, "desc" ]],
-    "language": {
-        "search": "_INPUT_"
-    }
-});
+    $('.datatables').dataTable({
+        "sDom" : '<"top"fl>rt<"bottom"p><"clear">',
+        "aaSorting": [[ 0, "desc" ]],
+        "language": {
+            "search": "_INPUT_"
+        }
+    });
 
-$('.dataTables_filter input').attr("placeholder", "Search...");
+    $('.dataTables_filter input').attr("placeholder", "Search...");
 </script>
