--- a/templates/analyses/cases/index.html
+++ b/templates/analyses/cases/index.html
@@ -34,7 +34,7 @@
 
     <script type="text/javascript">
     $('.datatables').dataTable({
-        "sDom" : '<"top">t<"bottom"lp><"clear">',
+        "sDom" : '<"top">t<"bottom"p><"clear">',
         "aaSorting": [[ 2, "desc" ]]
     });
     </script>
