--- a/templates/base.html
+++ b/templates/base.html
@@ -16,23 +16,23 @@
     <link rel="shortcut icon" href="{{ STATIC_URL }}img/ico/favicon.ico">
 
     {# Styles #}
-    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-    <!--<link href="{{ STATIC_URL }}css/bootstrap-responsive.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-responsive.min.css">-->
     <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/fonts.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/colorbox.css">
     <!--<link rel="stylesheet" href="{{ STATIC_URL }}css/responsive.css">-->
     <!--<link rel="stylesheet" href="{{ STATIC_URL }}css/DT_bootstrap.css">-->
-    <!--<link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.fancybox.css">-->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.fancybox.css">
     {# JS #}
     <!--<script src="{{ STATIC_URL }}js/jquery.min.js"></script>-->
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
     <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
     <script src="{{ STATIC_URL }}js/application.js"></script>
-    <!--<script src="{{ STATIC_URL }}js/jquery.dataTables.min.js"></script>-->
-    <!--<script src="{{ STATIC_URL }}js/DT_bootstrap.js"></script>-->
+    <script src="{{ STATIC_URL }}js/jquery.dataTables.min.js"></script>
+    <script src="{{ STATIC_URL }}js/DT_bootstrap.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.fancybox.js"></script>
     <script src="{{ STATIC_URL }}js/highcharts.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.colorbox.js"></script>
