--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -57,8 +57,8 @@
                                         </td>
                                         <td>{{ case.created_at }}</td>
                                         <td>
-                                            <a href="{% url "analyses.views.show_case" case.id "thumb" %}" type="button" class="btn btn-primary btn-xs" data-tooltip="tooltip" title="Show photo case"><i class="icon icon-camera"></i></a>
-                                            <a href="{% url "analyses.views.show_case" case.id "list" %}" type="button" class="btn btn-info btn-xs" data-tooltip="tooltip" title="View case"><i class="icon icon-book"></i></a>
+                                            <a href="{% url "analyses.views.show_case" case.id "thumb" %}" type="button" class="btn btn-primary btn-xs" data-tooltip="tooltip" title="Show photo case"><i class="fa fa-camera"></i></a>
+                                            <a href="{% url "analyses.views.show_case" case.id "list" %}" type="button" class="btn btn-info btn-xs" data-tooltip="tooltip" title="View case"><i class="fa fa-book"></i></a>
                                             <a href="{% url "analyses.views.edit_case" case.id %}" type="button" class="btn btn-soft btn-xs" data-tooltip="tooltip" title="Edit case"><i class="fa fa-pencil"></i></a>
                                         </td>
                                     </tr>
@@ -106,9 +106,13 @@
                                                 <span class="label label-success">2</span>
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-primary btn-xs"><i class="icon icon-camera"></i></button>
-                                                <button type="button" class="btn btn-info btn-xs"><i class="icon icon-bookmark"></i></button>
-                                                <button type="button" class="btn btn-soft btn-xs"><i class="icon icon-edit"></i></button>
+                                                <a href="{% url "analyses.views.image" anal.image_id %}" type="button" class="btn btn-primary btn-xs fancybox" data-tooltip="tooltip" title="Show photo"><i class="fa fa-photo"></i></a>
+                                                <a href="{% url "analyses.views.show_analysis" anal.id %}" type="button" class="btn btn-info btn-xs" data-tooltip="tooltip" title="View report"><i class="fa fa-file-text"></i></a>
+                                                {% if anal.image.favorites.all %}
+                                                    <a id="{% url "analyses.views.favorite" anal.image_id %}" rel="{{ anal.image_id }}" type="button" class="favorite btn btn-xs btn-warning star{{image.id}}" data-tooltip="tooltip" title="Un-set as favorite"> <i class="fa fa-star"> </i></a>
+                                                {% else %}
+                                                    <a id="{% url "analyses.views.favorite" anal.image_id %}" rel="{{ anal.image_id }}" type="button" class="favorite btn btn-xs star{{image.id}}" data-tooltip="tooltip" title="Set as favorite"> <i class="fa fa-star"> </i></a>
+                                                {% endif %}
                                             </td>
                                         </tr>
                                     {% endfor %}
