--- a/templates/admin/activity.html
+++ b/templates/admin/activity.html
@@ -24,7 +24,7 @@
         <div class="col-md-12">
             <div class="wdgt">
                 <div class="box">
-                    <ul class="nav nav-pills" id="cases_tab">
+                    <ul class="nav nav-pills nav-primary" id="cases_tab">
                         <li>
                             <a href="{% url "users.views.admin_list_users" %}">Users</a>
                         </li>
@@ -37,14 +37,8 @@
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane active" id="users">
-                            <div class="row-fluid">
-                                <div class="span12">
-                                    <div class="box corner-all">
-                                        <div class="box-body">
-                                            {% include "admin/_list_activity.html" %}
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="box">
+                                {% include "admin/_list_activity.html" %}
                             </div>
                         </div>
                     </div>
