--- a/templates/admin/show_user.html
+++ b/templates/admin/show_user.html
@@ -1,130 +1,127 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-eye-open"> </i> {{ user.username }}'s profile</h2>
+
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li><i class="fa fa-home"></i><a href="/">Dashboard</a></li>
+            <li><i class="fa fa-lock"></i><a href="{% url "users.views.admin_list_users" %}">Administration</a></li>
+            <li class="active">{{ user.username }}'s profile</li>
+        </ol>
+    </div>
+</div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>{{ user.username }}'s profile</h1>
         </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li>
-                    <a href="{% url "users.views.admin_list_users" %}"><i class="icon-lock"> </i> Administration</a>
-                        <span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    {{ user.username }}'s profile
-                </li>
-            </ul>
-        </div>
-        <div class="content-body" id="resume-content">
-            <div class="row-fluid profile">
-                <div class="span6">
-                    <div class="left">
-                        <h3 class="title-icon pull-left"><i class="icon-user"> </i></h3>
-                        <div class="title">
-                            <h3>{{ user.username }}</h3>
+        <div class="col-md-12">
+            <div class="wdgt">
+                <div class="row-fluid profile">
+                    <div class="span6">
+                        <div class="left">
+                            <h3 class="title-icon pull-left"><i class="icon-user"> </i></h3>
+                            <div class="title">
+                                <h3>{{ user.username }}</h3>
+                            </div>
+                            <a href="{% url "users.views.admin_edit_user" user.id %}"><i class="icon-edit"></i> Edit profile</a>
                         </div>
-                        <a href="{% url "users.views.admin_edit_user" user.id %}"><i class="icon-edit"></i> Edit profile</a>
                     </div>
-                </div>
-                <div class="span6">
-                    <div class="right">
-                        <div class="title display-table">
-                            <p>
-                                Name
-                            </p>
-                            <span class="pull-right">{{ user.first_name }}</span>
-                        </div>
-                        <div class="title display-table">
-                            <p>
-                                Last name
-                            </p>
-                            <span class="pull-right">{{ user.last_name }}</span>
-                        </div>
-                        <div class="title display-table">
-                            <p>
-                                Email
-                            </p>
-                            <span class="pull-right">{{ user.email }}</span>
+                    <div class="span6">
+                        <div class="right">
+                            <div class="title display-table">
+                                <p>
+                                    Name
+                                </p>
+                                <span class="pull-right">{{ user.first_name }}</span>
+                            </div>
+                            <div class="title display-table">
+                                <p>
+                                    Last name
+                                </p>
+                                <span class="pull-right">{{ user.last_name }}</span>
+                            </div>
+                            <div class="title display-table">
+                                <p>
+                                    Email
+                                </p>
+                                <span class="pull-right">{{ user.email }}</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row-fluid profile">
-                <div class="span6">
-                    <div class="left">
-                        <h3 class="title-icon pull-left"><i class="icon-bar-chart"> </i></h3>
-                        <div class="title">
-                            <h3>Stats</h3>
+                <div class="row-fluid profile">
+                    <div class="span6">
+                        <div class="left">
+                            <h3 class="title-icon pull-left"><i class="icon-bar-chart"> </i></h3>
+                            <div class="title">
+                                <h3>Stats</h3>
+                            </div>
+                            <dl class="dl-horizontal">
+                                <dt>Case opened:</dt>
+                                <dd><span class="badge badge-important">{{ user.owned_cases.all|length }}</span></dd>
+                                <dt>My analyses:</dt>
+                                <dd><span class="badge badge-success">{{ user.owned_images.all|length }}</span></dd>
+                                <dt>My hash lists:</dt>
+                                <dd><span class="badge badge-warning">{{ user.owned_hashes.all|length }}</span></dd>
+                            </dl>
                         </div>
-                        <dl class="dl-horizontal">
-                            <dt>Case opened:</dt>
-                            <dd><span class="badge badge-important">{{ user.owned_cases.all|length }}</span></dd>
-                            <dt>My analyses:</dt>
-                            <dd><span class="badge badge-success">{{ user.owned_images.all|length }}</span></dd>
-                            <dt>My hash lists:</dt>
-                            <dd><span class="badge badge-warning">{{ user.owned_hashes.all|length }}</span></dd>
-                        </dl>
                     </div>
-                </div>
-                <div class="span6">
-                    <div class="right">
-                        <div class="title display-table">
-                            <p>
-                                Last login
-                            </p>
-                            <span class="pull-right">{{ user.last_login }}</span>
-                        </div>
-                        <div class="title display-table">
-                            <p>
-                                Account created
-                            </p>
-                            <span class="pull-right">{{ user.date_joined }}</span>
-                        </div>
-                        <div class="title display-table">
-                            <p>
-                                Account active
-                            </p>
-                            <span class="pull-right">
-                                {%if user.is_active%}
-                                    <i class="icon-ok text-success"> </i>
-                                {%else%}
-                                    <i class="icon-remove text-error"> </i>
-                                {%endif%}
-                            </span>
-                        </div>
-                        <div class="title display-table">
-                            <p>
-                                Superuser
-                            </p>
-                            <span class="pull-right">
-                                {%if user.is_superuser%}
-                                    <i class="icon-ok text-success"> </i>
-                                {%else%}
-                                    <i class="icon-remove text-error"> </i>
-                                {%endif%}
-                            </span>
-                        </div>
-                        <div class="title display-table">
-                            <p>
-                                Staff
-                            </p>
-                            <span class="pull-right">
-                                {% if user.is_staff %}
-                                    <i class="icon-ok text-success"> </i>
-                                {% else %}
-                                    <i class="icon-remove text-error"> </i>
-                                {%endif%}
-                            </span>
+                    <div class="span6">
+                        <div class="right">
+                            <div class="title display-table">
+                                <p>
+                                    Last login
+                                </p>
+                                <span class="pull-right">{{ user.last_login }}</span>
+                            </div>
+                            <div class="title display-table">
+                                <p>
+                                    Account created
+                                </p>
+                                <span class="pull-right">{{ user.date_joined }}</span>
+                            </div>
+                            <div class="title display-table">
+                                <p>
+                                    Account active
+                                </p>
+                                <span class="pull-right">
+                                    {%if user.is_active%}
+                                        <i class="icon-ok text-success"> </i>
+                                    {%else%}
+                                        <i class="icon-remove text-error"> </i>
+                                    {%endif%}
+                                </span>
+                            </div>
+                            <div class="title display-table">
+                                <p>
+                                    Superuser
+                                </p>
+                                <span class="pull-right">
+                                    {%if user.is_superuser%}
+                                        <i class="icon-ok text-success"> </i>
+                                    {%else%}
+                                        <i class="icon-remove text-error"> </i>
+                                    {%endif%}
+                                </span>
+                            </div>
+                            <div class="title display-table">
+                                <p>
+                                    Staff
+                                </p>
+                                <span class="pull-right">
+                                    {% if user.is_staff %}
+                                        <i class="icon-ok text-success"> </i>
+                                    {% else %}
+                                        <i class="icon-remove text-error"> </i>
+                                    {%endif%}
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 {% endblock %}
