Administrator page and search page modified

--- a/templates/layout/_form.html
+++ b/templates/layout/_form.html
@@ -1,21 +1,21 @@
 <div class="form-group">
     {{ form.non_field_errors }}
-    <div class="fieldWrapper">
-        <label for="id_name">Name:</label>
+    <div>
+        Name:<br>
         <span style="height: 20px">{{ form.name }}</span><span class="help-inline">{{ form.name.errors }}</span>
     </div>
-    <div class="fieldWrapper">
-        <label for="id_description">Description:</label>
+    <div>
+        Description:<br>
         {{ form.description }}<span class="help-inline">{{ form.description.errors }}</span>
     </div>
-    <div class="fieldWrapper">
-        <label for="id_users">Users</label>
+    <div>
+        Users:
         {{ form.users }}<span class="help-inline">{{ form.users.errors }}</span><em>Use the CTRL key to select multiple users.</em>
     </div>
-    <div class="form-actions">
+    <div>
         <button id="btn_submit" type="submit" class="btn btn-success">
             Save
         </button>
-        <a href="{% url "analyses.views.list_cases" %}" class="btn btn-dark btn-large"> Back </a>
+        <a href="{% url "analyses.views.list_cases" %}" class="btn btn-default">Back</a>
     </div>
 </div>
