--- a/templates/analyses/cases/new.html
+++ b/templates/analyses/cases/new.html
@@ -20,11 +20,14 @@
         <div class="page-h1">
             <h1>New case</h1>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-12">
             <div class="wdgt">
-                <form action="{% url "analyses.views.new_case" %}" method="POST">{% csrf_token %}
-                    {%include "layout/_form.html"%}
-                </form>
+                <div class="wdgt-header">test</div>
+                <div class="wdgt-body">
+                    <form action="{% url "analyses.views.new_case" %}" method="POST">{% csrf_token %}
+                        {%include "layout/_form.html"%}
+                    </form>
+                </div>
             </div>
         </div>
     </div>
