tooltip data palcement modified

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -17,7 +17,7 @@
         <div class="col-md-12">
             <div class="wdgt">
                 <div class="box">
-                <a href="{% url "users.views.admin_new_user" %}" class="btn btn-success pull-right" data-tooltip="tooltip" title="Add user"><i class="fa fa-plus"></i></a>
+                <a href="{% url "users.views.admin_new_user" %}" class="btn btn-success pull-right" data-tooltip="tooltip" data-placement="left" title="Add user"><i class="fa fa-plus"></i></a>
                     <ul class="nav nav-pills nav-primary" id="cases_tab">
                         <li class="active">
                             <a href="{% url "users.views.admin_list_users" %}">Users</a>
